# Crawl-Daddy

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
coach_crawler/: constants.py
coach_crawler/cli/: main.py
coach_crawler/cli/commands/: crawl.py  export.py  seed.py  status.py  validate.py
coach_crawler/exporters/: _query.py  csv_exporter.py  excel_exporter.py  json_exporter.py
coach_crawler/extractors/: __init__.py  email_extractor.py  name_extractor.py  page_classifier.py  role_extractor.py  sport_classifier.py
coach_crawler/models/: __init__.py  base.py  coach.py  crawl_job.py  crawl_url.py  school.py
coach_crawler/scrapy_project/: items.py  middlewares.py  pipelines.py  settings.py
coach_crawler/scrapy_project/spiders/: base_seed_spider.py  base_staff_spider.py  college_staff_spider.py  hs_staff_spider.py  leagueapps_seed_spider.py  maxpreps_seed_spider.py  ncaa_directory_spider.py  prestosports_spider.py  sidearm_spider.py  sportsengine_seed_spider.py  youth_seed_spiders.py  (+3 more)
coach_crawler/utils/: url_utils.py
coach_crawler/validators/: dedup.py  email_validator.py
coach_crawler/web/: app.py  crawl_runner.py
config/: logging.py  settings.py
migrations/: env.py
migrations/versions/: 002_add_sub_level_and_youth.py
scripts/: generate_hs_urls.py  process_nces_data.py
seeds/: all_colleges.csv  ncaa_d1_schools.csv
tests/: conftest.py
tests/test_extractors/: test_email_extractor.py  test_role_extractor.py
tests/test_models/: test_schema.py
tests/test_spiders/: test_seed_spiders.py  test_youth_staff_spider.py
(+16 files in other folders)
