[project]
name = "coach-crawler"
version = "1.0.0"
description = "Production-grade web crawler for coaching staff email collection across America"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "playwright>=1.40",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "rich>=13.0",
    "structlog>=24.1",
    "httpx>=0.26",
    "beautifulsoup4>=4.12",
    "email-validator>=2.1",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "redis>=5.0",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
coach-crawler = "coach_crawler.cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coach_crawler*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
